Fix issue with vertical text alignment

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -99,6 +99,9 @@ body {
   font-family: Gotham, sans-serif;
   line-height: 1.5;
   background: rgb(var(--background-rgb));
+  /* Fixes font alignment issue */
+  position: relative;
+  bottom: 0.1em;
 }
 
 a {
